[package]
name = "skelly"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
env_logger = "0.11"
log = "0.4"
once_cell = "1.9.0"
cgmath = "0.18"
cosmic-text = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
htmd = "0.1.6"
tree-sitter = "0.19"
tree-sitter-markdown = "0.7"
thiserror = "1.0"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

libremarkable = { optional = true, version = "0.6.2", default-features = false, features = [
    "framebuffer",
    "framebuffer-types",
    "framebuffer-drawing",
    "input",
    "input-types",
] }

[features]
default = ["static"]
remarkable = ["libremarkable"]
static = []

[dev-dependencies]
pretty_assertions = "1"
