[package]
name = "skelly"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
cgmath = "0.18"
cosmic-text = "0.12"
env_logger = "0.11"
htmd = "0.1.6"
http-body-util = "0.1.0"
image = "0.25"
log = "0.4"
markup5ever_rcdom = "*" # Transitive dependency of `htmd`
once_cell = "1.9.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tree-sitter = "0.19"
tree-sitter-markdown = "0.7"
url = "2"

# Optional dependencies based on platform
libremarkable = { optional = true, version = "0.6.2", default-features = false, features = [
    "framebuffer",
    "framebuffer-types",
    "framebuffer-drawing",
    "input",
    "input-types",
] }

softbuffer = { optional = true, version = "0.4.6" }
winit = { optional = true, version = "0.30.9" }

[features]
default = ["static"]
desktop = ["softbuffer", "winit"]
remarkable = ["libremarkable"]
static = []

[dev-dependencies]
pretty_assertions = "1"
